--- a/mod-solution/index.html
+++ b/mod-solution/index.html
@@ -15,17 +15,17 @@
 </h1>
 <div class="row">
 
-<div class="col-lg-3 col-md-4 col-sm-3" id="one">
+<div class="col-sm-3" id="one">
     <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when
          an unknown printer took a galley of type and scrambled it to make a </p>
 
 </div>
-<div class="col-lg-3 col-md-4 col-sm-3" id="two">
+<div class="col-sm-3" id="two">
     <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when
          an unknown printer took a galley of type and scrambled it to make a </p>
 
 </div>
-<div class="col-lg-3 col-md-4 col-sm-3" id="three">
+<div class="col-sm-3" id="three">
     <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when
          an unknown printer took a galley of type and scrambled it to make a </p>
 
